fixed scrollbar

--- a/css/elements.css
+++ b/css/elements.css
@@ -1631,3 +1631,14 @@ span.timer {
 canvas {
     cursor: url(../images/cursor_paint.png), auto;
 }
+
+div#mCSB_1_dragger_vertical {
+    height: 24px;
+    color: #A1ACB0 !important;
+    width: 14px !important;
+    border-radius: 10px !important;
+}
+
+.mCS-rounded-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar, .mCS-rounded-dots-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+    background-color: rgba(160, 160, 160, 1) !important;
+}
